--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@
                 <li class="nav-item"><a class="nav-link" href="#DeleteAddDepositsByID">Delete List Add Deposit By ID</a></li>
 
 
+                <li class="nav-item"><a class="nav-link" href="#CreateExpenseCategories">Create Expense Categories</a></li>
+                <li class="nav-item"><a class="nav-link" href="#ViewExpenseCategories">View List Expense Categories</a></li>
+                <li class="nav-item"><a class="nav-link" href="#ViewExpenseCategoriesByID">View List Expense Categories By ID</a></li>
+                <li class="nav-item"><a class="nav-link" href="#EditExpenseCategorieByID">Edit List Expense Categories By ID</a></li>
+                <li class="nav-item"><a class="nav-link" href="#DeleteExpenseCategorieByID">Delete List Expense Categories By ID</a></li>
+
+
                 <li class="nav-item"><a class="nav-link" href="#CreateAttendancesManual">Create Attendances Manual</a></li>
                 <li class="nav-item"><a class="nav-link" href="#ViewAttendancesManual">View List Attendances Manual</a></li>
                 <li class="nav-item"><a class="nav-link" href="#ViewAttendancesManualByID">View List Attendances Manual By ID</a></li>
@@ -3651,6 +3658,153 @@
     "code": 200,
     "error": false,
     "message": "Deposit category deleted successfully"
+}
+                            </pre>
+                </div>
+            </div>
+
+
+            <div id="CreateExpenseCategories" class="card mb-4 anchor">
+                <div class="card-body">
+                    <h2>Create Expense Categories</h2>
+                    <p><strong>URL</strong></p>
+                    <p><code>/expense_categories</code></p>
+                    <p><strong>Method</strong></p>
+                    <p><code>POST</code></p>
+                    <p><strong>Request Body - Raw Json</strong></p>
+                    <pre>
+{
+    "expense_category" : string
+}
+
+                            </pre>
+                    <p><strong>Note</strong></p>
+                    <p><code>Include authorization token in headers.</code></p>
+                    <p><strong>Response</strong></p>
+                    <pre>
+{
+    "code": 201,
+    "data": {
+        "id": int,
+        "expense_category": string,
+        "created_at": time
+    },
+    "error": false,
+    "message": "Expense category added successfully"
+}
+
+                        </pre>
+                </div>
+            </div>
+
+            <div id="ViewExpenseCategories" class="card mb-4 anchor">
+                <div class="card-body">
+                    <h2>View List Expense Categories - Gunakan Query Params (searching) untuk melakukan pencarian</h2>
+                    <p><strong>URL</strong></p>
+                    <p><code>/expense_categories</code></p>
+                    <p><strong>Method</strong></p>
+                    <p><code>GET</code></p>
+                    <p><strong>Request Body</strong></p>
+                    <p><strong>Note</strong></p>
+                    <p><code>Include authorization token in headers</code></p>
+                    <p><strong>Response</strong></p>
+                    <pre>
+{
+    "code": 200,
+    "data": [
+        {
+            "id": int,
+            "expense_category": string,
+            "created_at": time
+        },
+        {
+            "id": int,
+            "expense_category": string,
+            "created_at": time
+        }
+    ],
+    "error": false,
+    "message": "Expense categories retrieved successfully"
+}
+                    </pre>
+                </div>
+            </div>
+
+            <div id="ViewExpenseCategoriesByID" class="card mb-4 anchor">
+                <div class="card-body">
+                    <h2>View List Expense Categories By ID</h2>
+                    <p><strong>URL</strong></p>
+                    <p><code>/expense_categories/:id</code></p>
+                    <p><strong>Method</strong></p>
+                    <p><code>GET</code></p>
+                    <p><strong>Request Body</strong></p>
+                    <p><strong>Note</strong></p>
+                    <p><code>Include authorization token in headers</code></p>
+                    <p><strong>Response</strong></p>
+                    <pre>
+{
+    "code": 200,
+    "data": {
+        "id": int,
+        "expense_category": string,
+        "created_at": time
+    },
+    "error": false,
+    "message": "Expense category retrieved successfully"
+}
+                    </pre>
+                </div>
+            </div>
+
+
+            <div id="EditExpenseCategorieByID" class="card mb-4 anchor">
+                <div class="card-body">
+                    <h2>Edit List Expense Categories By ID</h2>
+                    <p><strong>URL</strong></p>
+                    <p><code>/expense_categories/:id</code></p>
+                    <p><strong>Method</strong></p>
+                    <p><code>PUT</code></p>
+                    <p><strong>Request Body - Raw Json</strong></p>
+                    <pre>
+{
+    "expense_category" : string
+}
+                            </pre>
+                    <p><strong>Note</strong></p>
+                    <p><code>Include authorization token in headers.</code></p>
+                    <p><strong>Response</strong></p>
+                    <pre>
+{
+    "code": 200,
+    "data": {
+        "id": int,
+        "expense_category": string,
+        "created_at": time
+    },
+    "error": false,
+    "message": "Expense category updated successfully"
+}
+
+                            </pre>
+                </div>
+            </div>
+
+
+            <div id="DeleteExpenseCategorieByID" class="card mb-4 anchor">
+                <div class="card-body">
+                    <h2>Delete List Expense Categories By ID</h2>
+                    <p><strong>URL</strong></p>
+                    <p><code>/expense_categories/:id</code></p>
+                    <p><strong>Method</strong></p>
+                    <p><code>DELETE</code></p>
+                    <p><strong>Note</strong></p>
+                    <p><code>Include authorization token in headers.</code></p>
+                    <p><strong>Response</strong></p>
+                    <pre>
+{
+    "code": 200,
+    "error": false,
+    "message": "Expense category deleted successfully"
 }
                             </pre>
                 </div>
